--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="images/favicon.jpg">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/favicon.jpg">
     <!-- Font Awesome for icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <!-- Slick Slider CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -32,7 +37,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#testimonials" class="nav-link">Testimonials</a></li>
-                    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="#contact" class="btn btn-primary btn-sm mt-1">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -53,73 +58,101 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="py-5 container">
-        <div class="row">
-            <div class="col-md-6">
-                <h2>About the Book</h2>
-                <p>This book is packed with insights that will change the way you think and help you achieve your goals.
-                    A perfect companion for anyone seeking inspiration and practical knowledge.</p>
-            </div>
-            <div class="col-md-6">
-                <ul class="list-unstyled">
-                    <li><i class="fa-solid fa-check text-primary"></i> Easy to read & engaging</li>
-                    <li><i class="fa-solid fa-check text-primary"></i> Real-life lessons & examples</li>
-                    <li><i class="fa-solid fa-check text-primary"></i> Transformative strategies</li>
-                </ul>
+    <section id="about" class="container">
+        <div class="section-container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2 class="section-title">About the Book</h2>
+                    <p>Atomic Habits by James Clear is a comprehensive, practical guide on how to change your habits and
+                        get
+                        1% better every day. Using a framework called the Four Laws of Behavior Change, Atomic Habits
+                        teaches readers a simple set of rules for creating good habits and breaking bad ones. Read the
+                        full
+                        summary to glean 3 key lessons from Atomic Habits, learn how to build a habit in 4 simple steps,
+                        and
+                        get a handy reference guide for the strategies recommended throughout the book.</p>
+                    <ul class="list-unstyled">
+                        <li><i class="fa-solid fa-check text-primary"></i> Easy to read & engaging</li>
+                        <li><i class="fa-solid fa-check text-primary"></i> Real-life lessons & examples</li>
+                        <li><i class="fa-solid fa-check text-primary"></i> Transformative strategies</li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <img src="./images/book-about.png" alt="Book Cover" class="img-fluid mt-4 mt-md-0">
+                </div>
             </div>
         </div>
+
     </section>
 
     <!-- Testimonials Carousel -->
-    <section id="testimonials" class="py-5 bg-light">
-        <div class="container text-center">
-            <h2 class="mb-4">What Readers Say</h2>
-            <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
+    <section id="testimonials" class="bg-light">
+        <div class="section-container">
+            <div class="container text-center">
+                <h2 class="mb-4">Book Reviews</h2>
+                <p class="section-subtitle">“Discover what readers around the world are saying about Atomic Habits.
+                    Their stories reflect how small changes have created big transformations in their lives.”</p>
+                <!-- Slick Slider Wrapper -->
+                <div class="testimonial-slider">
 
-                    <div class="carousel-item active">
-                        <blockquote class="blockquote">
-                            <p>"This book changed my perspective completely!"</p>
-                            <footer class="blockquote-footer">John Doe</footer>
-                        </blockquote>
+                    <!-- Slide 1 -->
+                    <div class="card p-4 mx-2">
+                        <img src="./images/person1.jpg" alt="Reviewer 1" class="rounded-circle mb-3 mx-auto"
+                            style="width:80px;height:80px;">
+                        <p>"This book changed my perspective completely! best book for young adults"</p>
+                        <div class="blockquote-footer">Jane Smith</div>
                     </div>
 
-                    <div class="carousel-item">
-                        <blockquote class="blockquote">
-                            <p>"A must-read for anyone who wants to grow."</p>
-                            <footer class="blockquote-footer">Jane Smith</footer>
-                        </blockquote>
+                    <!-- Slide 2 -->
+                    <div class="card p-4 mx-2">
+                        <img src="./images/person2.jpg" alt="Reviewer 2" class="rounded-circle mb-3 mx-auto"
+                            style="width:80px;height:80px;">
+                        <p>"Simple, clear, and powerful — this book is a must-read for anyone who wants lasting change"</p>
+                        <div class="blockquote-footer">John Doe</div>
                     </div>
 
-                    <div class="carousel-item">
-                        <blockquote class="blockquote">
-                            <p>"Engaging, inspiring, and truly valuable."</p>
-                            <footer class="blockquote-footer">Michael Lee</footer>
-                        </blockquote>
+                    <!-- Slide 3 -->
+                    <div class="card p-4 mx-2">
+                        <img src="./images/person3.jpg" alt="Reviewer 3" class="rounded-circle mb-3 mx-auto"
+                            style="width:80px;height:80px;">
+                        <p>"Every chapter felt practical and easy to apply. I started waking up early consistently after reading it."</p>
+                        <div class="blockquote-footer">Mark Wilson</div>
                     </div>
-
+                    <!-- Slide 4 -->
+                    <div class="card p-4 mx-2">
+                        <img src="./images/person4.jpg" alt="Reviewer 3" class="rounded-circle mb-3 mx-auto"
+                            style="width:80px;height:80px;">
+                        <p>"Atomic Habits helped me build a reading habit I’ve struggled with for years."
+                        </p>
+                        <div class="blockquote-footer">Emily Chen</div>
+                    </div>
+                    <!-- Slide 5 -->
+                    <div class="card p-4 mx-2">
+                        <img src="./images/person5.jpg" alt="Reviewer 3" class="rounded-circle mb-3 mx-auto"
+                            style="width:80px;height:80px;">
+                        <p>"This book taught me how to break bad habits without feeling overwhelmed. Life-changing!"
+                        </p>
+                        <div class="blockquote-footer">Michli Johnson</div>
+                    </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                </button>
             </div>
         </div>
+
+
     </section>
 
     <!-- Call to Action -->
     <section class="cta-section">
-        <h2>Get Your Copy Now!</h2>
-        <a href="#contact" class="btn btn-light btn-lg mt-3">Buy the Book</a>
+        <div class="section-container">
+            <h2>Get Your Copy Now!</h2>
+            <a href="#contact" class="btn btn-light btn-lg mt-3">Buy the Book</a>
+        </div>
+
     </section>
 
     <!-- Contact Form -->
     <!-- formspree code  -->
-    <!-- <section id="contact" class="py-5 container">
+    <!-- <section id="contact" class="container">
         <h2 class="text-center mb-4">Contact Us</h2>
         <form action="https://formspree.io/f/mnnzkqdb" method="POST" class="col-md-6 mx-auto">
         <div class="mb-3">
@@ -135,25 +168,29 @@
         </form>
         </section> -->
     <!-- google sheets code -->
-    <section id="contact" class="py-5 container">
-        <h2 class="text-center mb-4">Contact Us</h2>
-        <form id="contactForm" class="col-md-6 mx-auto">
-            <div class="mb-3">
-                <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-            </div>
-            <div class="mb-3">
-                <input type="email" name="email" class="form-control" placeholder="Your Email" required>
-            </div>
-            <div class="mb-3">
-                <textarea name="message" class="form-control" rows="4" placeholder="Your Message" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Send</button>
-        </form>
-        <p id="formMsg" class="text-center mt-3"></p>
+    <section id="contact" class="container">
+        <div class="section-container">
+            <h2 class="text-center mb-4">Contact Us</h2>
+            <form id="contactForm" class="col-md-6 mx-auto">
+                <div class="mb-3">
+                    <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+                </div>
+                <div class="mb-3">
+                    <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+                </div>
+                <div class="mb-3">
+                    <textarea name="message" class="form-control" rows="4" placeholder="Your Message"
+                        required></textarea>
+                </div>
+                <button type="submit" id="submitBtn" class="btn btn-primary w-100">Send</button>
+            </form>
+            <p id="formMsg" class="text-center mt-3"></p>
+        </div>
+
     </section>
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 My Book. All rights reserved.</p>
+        <p class="mb-0">&copy; 2025 My Book. All rights reserved.</p>
     </footer>
 
     <!-- Popup Modal -->
@@ -169,6 +206,11 @@
             </div>
         </div>
     </div>
+    <!-- jQuery (required for Slick) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Slick JS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
     <!-- Bootstrap JS + Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
