changes of features section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#testimonials" class="nav-link">Testimonials</a></li>
+                    <li class="nav-item"><a href="#features" class="nav-link">Features</a></li>
                     <li class="nav-item"><a href="#contact" class="btn btn-primary btn-sm mt-1">Contact Us</a></li>
                 </ul>
             </div>
@@ -90,7 +91,7 @@
         <div class="section-container">
             <div class="container text-center">
                 <h2 class="mb-4">Book Reviews</h2>
-                <p class="section-subtitle">“Discover what readers around the world are saying about Atomic Habits.
+                <p class="section-subtitle text-muted">“Discover what readers around the world are saying about Atomic Habits.
                     Their stories reflect how small changes have created big transformations in their lives.”</p>
                 <!-- Slick Slider Wrapper -->
                 <div class="testimonial-slider">
@@ -107,7 +108,8 @@
                     <div class="card p-4 mx-2">
                         <img src="./images/person2.jpg" alt="Reviewer 2" class="rounded-circle mb-3 mx-auto"
                             style="width:80px;height:80px;">
-                        <p>"Simple, clear, and powerful — this book is a must-read for anyone who wants lasting change"</p>
+                        <p>"Simple, clear, and powerful — this book is a must-read for anyone who wants lasting change"
+                        </p>
                         <div class="blockquote-footer">John Doe</div>
                     </div>
 
@@ -115,7 +117,8 @@
                     <div class="card p-4 mx-2">
                         <img src="./images/person3.jpg" alt="Reviewer 3" class="rounded-circle mb-3 mx-auto"
                             style="width:80px;height:80px;">
-                        <p>"Every chapter felt practical and easy to apply. I started waking up early consistently after reading it."</p>
+                        <p>"Every chapter felt practical and easy to apply. I started waking up early consistently after
+                            reading it."</p>
                         <div class="blockquote-footer">Mark Wilson</div>
                     </div>
                     <!-- Slide 4 -->
@@ -140,7 +143,80 @@
 
 
     </section>
+    <!-- features -->
+    <section id="features" class="container">
+        <div class="section-container">
+            <h2 class="section-title text-center">Features Overview</h2>
+            <p class="section-subtitle text-muted"> "Unlock the key ideas from Atomic Habits and see how small, consistent changes
+                can lead to remarkable results. This overview highlights the core principles that make the book a
+                practical guide to transforming your habits."</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="./images/overview2.png" alt="Book Cover" class="img-fluid mt-4 mt-md-0">
+                </div>
+                <div class="col-md-6">
+                    <!-- Features List -->
+                    <ul class="list-unstyled">
+                        <li class="d-flex align-items-start mb-4">
+                            <i class="bi bi-graph-up-arrow fs-3 text-primary me-3"></i>
+                            <div>
+                                <h6 class="fw-bold mb-1">The Power of Tiny Gains</h6>
+                                <p class="text-muted mb-0">Small improvements, repeated consistently, compound into
+                                    extraordinary outcomes.</p>
+                            </div>
+                        </li>
 
+                        <li class="d-flex align-items-start mb-4">
+                            <i class="bi bi-repeat fs-3 text-success me-3"></i>
+                            <div>
+                                <h6 class="fw-bold mb-1">Habit Formation Loop</h6>
+                                <p class="text-muted mb-0">Every habit is built on a cycle of cue, craving, response,
+                                    and reward.</p>
+                            </div>
+                        </li>
+
+                        <li class="d-flex align-items-start mb-4">
+                            <i class="bi bi-person-check fs-3 text-warning me-3"></i>
+                            <div>
+                                <h6 class="fw-bold mb-1">Identity-Based Habits</h6>
+                                <p class="text-muted mb-0">True change comes not from what you want to achieve, but from
+                                    who you wish to become.</p>
+                            </div>
+                        </li>
+
+                        <li class="d-flex align-items-start mb-4">
+                            <i class="bi bi-house-door fs-3 text-danger me-3"></i>
+                            <div>
+                                <h6 class="fw-bold mb-1">Environment Design</h6>
+                                <p class="text-muted mb-0">Shape your surroundings to make good habits easier and bad
+                                    habits harder.</p>
+                            </div>
+                        </li>
+
+                        <li class="d-flex align-items-start mb-4">
+                            <i class="bi bi-speedometer2 fs-3 text-info me-3"></i>
+                            <div>
+                                <h6 class="fw-bold mb-1">The 1% Rule</h6>
+                                <p class="text-muted mb-0">Focus on getting just 1% better every day for long-term
+                                    success.</p>
+                            </div>
+                        </li>
+
+                        <li class="d-flex align-items-start">
+                            <i class="bi bi-slash-circle fs-3 text-secondary me-3"></i>
+                            <div>
+                                <h6 class="fw-bold mb-1">Breaking Bad Habits</h6>
+                                <p class="text-muted mb-0">Invert the same principles: make bad habits invisible,
+                                    unattractive, difficult, and unsatisfying.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
     <!-- Call to Action -->
     <section class="cta-section">
         <div class="section-container">
