icon adition change

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-
+    <!-- Bootstrap Icons CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -29,6 +30,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white shadow-sm sticky-top">
         <div class="container">
+            <i class="bi bi-book-half text-primary me-2 fs-4"></i>
             <a class="navbar-brand fw-bold" href="#">Atomic Habits</a>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
@@ -91,7 +93,8 @@
         <div class="section-container">
             <div class="container text-center">
                 <h2 class="mb-4">Book Reviews</h2>
-                <p class="section-subtitle text-muted">“Discover what readers around the world are saying about Atomic Habits.
+                <p class="section-subtitle text-muted">“Discover what readers around the world are saying about Atomic
+                    Habits.
                     Their stories reflect how small changes have created big transformations in their lives.”</p>
                 <!-- Slick Slider Wrapper -->
                 <div class="testimonial-slider">
@@ -147,7 +150,8 @@
     <section id="features" class="container">
         <div class="section-container">
             <h2 class="section-title text-center">Features Overview</h2>
-            <p class="section-subtitle text-muted"> "Unlock the key ideas from Atomic Habits and see how small, consistent changes
+            <p class="section-subtitle text-muted"> "Unlock the key ideas from Atomic Habits and see how small,
+                consistent changes
                 can lead to remarkable results. This overview highlights the core principles that make the book a
                 practical guide to transforming your habits."</p>
             <div class="row">
