--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+    <!-- aos scroll animation css -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- Bootstrap Icons CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <!-- Custom CSS -->
@@ -30,8 +33,10 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white shadow-sm sticky-top">
         <div class="container">
-            <i class="bi bi-book-half text-primary me-2 fs-4"></i>
-            <a class="navbar-brand fw-bold" href="#">Atomic Habits</a>
+            <div class="logo-body">
+                <i class="bi bi-book-half text-primary me-2 fs-4"></i>
+                <a class="navbar-brand fw-bold" href="#">Atomic Habits</a>
+            </div>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,7 +45,7 @@
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#testimonials" class="nav-link">Testimonials</a></li>
                     <li class="nav-item"><a href="#features" class="nav-link">Features</a></li>
-                    <li class="nav-item"><a href="#contact" class="btn btn-primary btn-sm mt-1">Contact Us</a></li>
+                    <li class="nav-item"><a href="#contact" class="btn btn-primary btn-sm mt-1 mb-3 mb-lg-0">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -64,7 +69,7 @@
     <section id="about" class="container">
         <div class="section-container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6" data-aos="fade-right">
                     <h2 class="section-title">About the Book</h2>
                     <p>Atomic Habits by James Clear is a comprehensive, practical guide on how to change your habits and
                         get
@@ -80,7 +85,7 @@
                         <li><i class="fa-solid fa-check text-primary"></i> Transformative strategies</li>
                     </ul>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" data-aos="fade-left">
                     <img src="./images/book-about.png" alt="Book Cover" class="img-fluid mt-4 mt-md-0">
                 </div>
             </div>
@@ -290,7 +295,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Slick JS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
+    <!-- aos JS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Bootstrap JS + Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
