--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
     </nav>
 
     <!-- Hero -->
-    <section class="hero d-flex align-items-center">
-        <div class="container text-center text-md-start d-md-flex align-items-center">
-            <div class="col-md-6">
-                <h1 class="fw-bold">Discover <span class="text-primary">Your Next Favorite Book</span></h1>
-                <p class="lead mt-3">A journey into knowledge, inspiration, and growth.</p>
-                <a href="#contact" class="btn btn-primary btn-lg mt-3">Buy Now</a>
-            </div>
-            <div class="col-md-6 text-center">
-                <img src="./images/book cover.jpg" alt="Book Cover" class="img-fluid mt-4 mt-md-0">
-            </div>
-        </div>
-    </section>
+<section class="hero d-flex align-items-center text-center text-light position-relative">
+  <!-- Overlay -->
+  <div class="overlay position-absolute top-0 start-0 w-100 h-100"></div>
+  
+  <!-- Content -->
+  <div class="container position-relative hero-section-content">
+    <h1 class="fw-bold display-4">Transform <span class="text-primary">Your Habits</span>, Transform Your Life</h1>
+    <p class="lead mt-3">Discover the power of small changes with <strong>Atomic Habits</strong>.</p>
+    <a href="#contact" class="btn btn-primary btn-lg mt-3 shadow">Buy Now</a>
+  </div>
+</section>
+
 
     <!-- About -->
     <section id="about" class="container">
@@ -230,7 +230,7 @@
     <section class="cta-section">
         <div class="section-container">
             <h2>Get Your Copy Now!</h2>
-            <a href="#contact" class="btn btn-light btn-lg mt-3">Buy the Book</a>
+            <a href="#contact" class="btn btn-dark btn-lg mt-3">Buy the Book</a>
         </div>
 
     </section>
@@ -287,7 +287,7 @@
                 <!-- Buy Now Button -->
                 <a href="#contact" id="buyNowBtn" class="btn btn-primary">Buy Now</a>
                 <!-- Close Button -->
-                <button class="btn btn-secondary mt-2" data-bs-dismiss="modal">Close</button>
+                <button class="btn btn-dark mt-2" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
