--- a/index.html
+++ b/index.html
@@ -29,40 +29,43 @@
 </head>
 
 <body>
+    <header class="bg-white shadow-sm sticky-top">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container">
+                <div class="logo-body">
+                    <i class="bi bi-book-half text-primary me-2 fs-4"></i>
+                    <a class="navbar-brand fw-bold" href="#">Atomic Habits</a>
+                </div>
+                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="navmenu" class="collapse navbar-collapse">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="#testimonials" class="nav-link">Testimonials</a></li>
+                        <li class="nav-item"><a href="#features" class="nav-link">Features</a></li>
+                        <li class="nav-item"><a href="#contact" class="btn btn-primary btn-sm mt-1 mb-3 mb-lg-0">Contact
+                                Us</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-white shadow-sm sticky-top">
-        <div class="container">
-            <div class="logo-body">
-                <i class="bi bi-book-half text-primary me-2 fs-4"></i>
-                <a class="navbar-brand fw-bold" href="#">Atomic Habits</a>
-            </div>
-            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div id="navmenu" class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="#testimonials" class="nav-link">Testimonials</a></li>
-                    <li class="nav-item"><a href="#features" class="nav-link">Features</a></li>
-                    <li class="nav-item"><a href="#contact" class="btn btn-primary btn-sm mt-1 mb-3 mb-lg-0">Contact Us</a></li>
-                </ul>
-            </div>
+    <!-- Header section -->
+    <section class="hero d-flex align-items-center text-center text-light position-relative">
+        <!-- Overlay -->
+        <div class="overlay position-absolute top-0 start-0 w-100 h-100"></div>
+
+        <!-- Content -->
+        <div class="container position-relative hero-section-content">
+            <h1 class="fw-bold display-4">Transform <span class="text-primary">Your Habits</span>, Transform Your Life
+            </h1>
+            <p class="lead mt-3">Discover the power of small changes with <strong>Atomic Habits</strong>.</p>
+            <a href="#contact" class="btn btn-primary btn-lg mt-3 shadow">Buy Now</a>
         </div>
-    </nav>
-
-    <!-- Hero -->
-<section class="hero d-flex align-items-center text-center text-light position-relative">
-  <!-- Overlay -->
-  <div class="overlay position-absolute top-0 start-0 w-100 h-100"></div>
-  
-  <!-- Content -->
-  <div class="container position-relative hero-section-content">
-    <h1 class="fw-bold display-4">Transform <span class="text-primary">Your Habits</span>, Transform Your Life</h1>
-    <p class="lead mt-3">Discover the power of small changes with <strong>Atomic Habits</strong>.</p>
-    <a href="#contact" class="btn btn-primary btn-lg mt-3 shadow">Buy Now</a>
-  </div>
-</section>
+    </section>
 
 
     <!-- About -->
