--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                         <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                         <li class="nav-item"><a href="#testimonials" class="nav-link">Testimonials</a></li>
                         <li class="nav-item"><a href="#features" class="nav-link">Features</a></li>
-                        <li class="nav-item"><a href="#contact" class="btn btn-primary btn-sm mt-1 mb-3 mb-lg-0">Contact
-                                Us</a></li>
+                        <li class="nav-item"><a href="#contact" class="btn btn-primary btn-sm mt-1 mb-3 mb-lg-0">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -54,7 +53,8 @@
     </header>
 
     <!-- Header section -->
-    <section class="hero d-flex align-items-center text-center text-light position-relative">
+    <section class="section-header">
+        <div class="hero d-flex align-items-center text-center text-light position-relative">
         <!-- Overlay -->
         <div class="overlay position-absolute top-0 start-0 w-100 h-100"></div>
 
@@ -65,6 +65,8 @@
             <p class="lead mt-3">Discover the power of small changes with <strong>Atomic Habits</strong>.</p>
             <a href="#contact" class="btn btn-primary btn-lg mt-3 shadow">Buy Now</a>
         </div>
+        </div>
+
     </section>
 
 
