--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 practical guide to transforming your habits."</p>
             <div class="row">
                 <div class="col-md-6">
-                    <img src="./images/overview2.png" alt="Book Cover" class="img-fluid mt-4 mt-md-0">
+                    <img src="./images/overview2.png" alt="Book Cover" class="img-fluid mb-4 mb-md-0">
                 </div>
                 <div class="col-md-6">
                     <!-- Features List -->
