max width changes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <!-- Content -->
         <div class="container position-relative hero-section-content">
-            <h1 class="fw-bold display-4">Transform <span class="text-primary">Your Habits</span>, Transform Your Life
+            <h1 class="fw-bold display-4 mw-800">Transform <span class="text-primary">Your Habits</span>, Transform Your Life
             </h1>
             <p class="lead mt-3">Discover the power of small changes with <strong>Atomic Habits</strong>.</p>
             <a href="#contact" class="btn btn-primary btn-lg mt-3 shadow">Buy Now</a>
